--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                         <div class="slider-desc">
                             <h1>NekoLaiS</h1>
                             <br>
-                            <p >The team's main funnyman. Sometimes his goofs turn into bugs, but he fixes them instantly. Coder,
+                            <p >The team's main funnyman. Sometimes his goofs turn into bugs, 
+                                but he fixes them instantly. Coder,
                                 designer and just a sweetheart.<br><br>
                                 Loves to work. Work. WORK!</p>
                         </div>
